--- a/content/Ap/Ap01.md
+++ b/content/Ap/Ap01.md
@@ -1,5 +1,5 @@
 ---
-title: "AP01 PHP"
+title: "AP SIO1 : Création d'un formulaire et traitement avec du PHP"
 date: 2023-09-30T22:53:58+05:30
 draft: false
 author: "Matteo"
@@ -14,7 +14,6 @@ weight: 1
 ---
 
 La mission était de crée un formulaire et de le traiter en php
-# AP: Creéation d'un formulaire et traitement avec  du PHP
 
 ## 1) Objectif de l'activité 
    - Réaliser un formulaire en HTML et CSS en respectant une charte graphique.
